# full-stack-gen-ai-project

./: .dockerignore  .gitignore  Dockerfile  claude.md  list_models.py  pyproject.toml  railway.json  requirements.txt  restructure.py
app/: main.py
app/api/: routes.py
app/core/: config.py
app/services/: rag_service.py
static/: index.html
static/css/: style.css
static/js/: script.js
